refactor(core): apply instanceof patterns and switch expressions on hot paths
why: per-record and per-exception code still used pre-17 idioms: cast-after-
instanceof chains, statement switches with break, and trim().isEmpty() for
blank checks.

what: use instanceof pattern variables (AddaxException, LongColumn,
PerfRecord, NullToDefaultTransformer, GroovyTransformer), arrow switch
expressions (MapTransformer, FilterTransformer, NullToDefaultTransformer,
TaskGroupContainer.generateRunner), and String.isBlank in MathUtil.

impact: identical behavior, less ceremony on the hot path; no preview features
used (type-pattern switch on FilterTransformer's column dispatch is a Java 17
preview and stays untouched).